Correct index page top margin on mobile

--- a/src/style/Textpattern/sass/modules/fluxbb/_layout.scss
+++ b/src/style/Textpattern/sass/modules/fluxbb/_layout.scss
@@ -76,7 +76,6 @@ thead th {
     @include pie-clearfix;
 
     border-bottom: 1px solid $color-border;
-    padding: 1px 0;
 
     ul {
         list-style: none;
