--- a/src/style/Textpattern/sass/modules/fluxbb/_navigation.scss
+++ b/src/style/Textpattern/sass/modules/fluxbb/_navigation.scss
@@ -6,12 +6,13 @@
         @include pie-clearfix;
 
         list-style: none;
-        margin-bottom: 0;
+        margin: 1.4em 0 0;
         border-bottom: 1px solid $color-border;
         padding: 0;
 
         @include breakpoint(max-width $breakpoint-2) {
-            border-bottom: 0;
+            margin: 0;
+            border: 0;
         }
     }
 
@@ -21,8 +22,7 @@
         @include border-top-left-radius(1em);
 
         float: left;
-        margin-bottom: -1px;
-        margin-right: 0.308em;
+        margin: 0 0.308em -1px 0;
         border: 1px solid $color-border;
         padding: 0.5384616em 1em;
         color: $color-text;
@@ -73,12 +73,16 @@
 }
 
 @include breakpoint(max-width $breakpoint-2) {
-
-    /* hide some non-essential navigation links on small devices to reduce clutter */
-    #page-index #brdmenu #navindex,
-    #brdmenu #navuserlist,
-    #brdmenu #navsearch {
-        display: none;
+    /* adjust top margin on small devices */
+    #navindex,
+    #page-index #navadmin {
+        margin-top: 1em;
     }
 
+    /* hide some non-essential navigation links on small devices to reduce clutter */
+    #page-index #navindex,
+    #navuserlist,
+    #navsearch {
+        display: none;
+    }
 }
